NEWSTART-712 Fix text re-wrapping during transition

--- a/app/assets/css/transitions.less
+++ b/app/assets/css/transitions.less
@@ -1,8 +1,14 @@
 /* text-tile */
 .text-tile-transition-group {
+  position: absolute;
+  top: 0;
+  left: @tile-padding;
+  right: @tile-padding;
+  bottom: @tile-padding;
+
   .tile__item {
     position: absolute;
-    width: 94%; // FIXME: MAGIC NUMBER. Using 100% width overflowed container, unable to set parent's position relative
+    width: 100%;
   }
 }
 
